--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,34 @@
 body {
 	padding: 20px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 	.App {
 		font-size: 1.6rem;
+		nav {
+			background-color: #eee;
+			padding: 5px;
+			margin: 0 0 10px 0;
+			.selected {
+				font-weight: bold;
+			}
+			ul {
+				display: flex;
+				li {
+					margin: 0 10px 0 0;
+					a {
+						text-decoration: none !important;
+						color: black;
+					}
+				}
+			}
+		}
+		.page {
+			font-size: 1.3rem;
+			p {
+				line-height: 1.3;
+			}
+			button {
+				margin: 0 5px 5px 0;
+			}
+		}
 	}
 }
